@@ -1,3 +1,8 @@
+2011-09-19  Julien Danjou  <julien@danjou.info>
+
+	* auth-source.el (auth-source-netrc-parse): Use an obfuscation method
+	which work with things that are not ASCII.
+
 2011-09-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* mm-decode.el (mm-inline-media-tests): Support imagemagick images.
